--- a/.gitignore
+++ b/.gitignore
@@ -59,12 +59,12 @@ Makefile.config
 # 1. reference, and not casually committed
 # 2. custom, and live on their own unless they're deliberated contributed
 data/*
-models/*
-*.caffemodel
-*.solverstate
-*.binaryproto
-*leveldb
-*lmdb
+#models/*
+#*.caffemodel
+#*.solverstate
+#*.binaryproto
+#*leveldb
+#*lmdb
 
 # build, distribute, and bins (+ python proto bindings)
 build
